[package]
name = "clap_declspec"
rust-version.workspace = true
edition.workspace = true
version = "0.1.0"
authors.workspace = true
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = ["trace/enabled"]

[dependencies]
trace = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
thiserror = { workspace = true }
env = { workspace = true }
eyre = { workspace = true }
strum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
