[package]
name = "clap_utils"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = [ "trace/enabled"]

[dependencies]
eyre = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true, optional = true }
clap = { workspace = true }
