[package]
name = "config_utils"
rust-version.workspace = true
#edition.workspace = true
edition = "2024"
version.workspace = true
repository.workspace = true

[features]
default = []
serde = ["dep:serde"]
schemars = ["dep:schemars"]
merge = ["dep:merge"]

[dependencies]
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
merge = { workspace = true, optional = true }
