[package]
name = "config_utils"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

[features]
default = []
serde = ["dep:serde"]
schemars = ["dep:schemars"]
validator-garde = ["dep:garde"]

[dependencies]
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
merge = { workspace = true }
strum = { workspace = true }
derive_more = { workspace = true }
garde = { workspace = true, optional = true }
maps = { workspace = true }
sets = { workspace = true }
