[package]
name = "dir_walker"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["full"]
full = ["ignore", "recursive", "memory", "glob"]
ignore = ["dep:ignore"]
recursive = ["dep:walkdir"]
memory = []
glob = ["ignore", "dep:globset"]

[dependencies]
ignore = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
globset = { workspace = true, optional = true }
