[package]
name = "dir_walker"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["full", "enable-tracing"]
full = ["ignore", "memory", "glob"]
ignore = ["dep:ignore"]
memory = []
glob = ["ignore", "dep:globset"]
enable-tracing = ["dep:tracing", "dep:trace", "trace/enabled"]

[dependencies]
ignore = { workspace = true, optional = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
globset = { workspace = true, optional = true }
strum = { workspace = true }
trace = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
derive-new = { workspace = true }
crossbeam-channel = { workspace = true }
num_cpus = { workspace = true }
path-slash = { workspace = true }
