[package]
name = "env"
rust-version.workspace = true
#edition.workspace = true
edition = "2024"
version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
dhat-heap = ["dep:dhat"]

[[bench]]
path = "./benches/env_benchmarks.rs"
name = "env_benchmarks"
harness = false

[dependencies]
derive_more = { workspace = true }
thiserror = { workspace = true }
convert_case = { workspace = true }
strum = { workspace = true }
maps = { workspace = true }
derive-new = { workspace = true }
dhat = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
