[package]
name = "env_loader"
rust-version.workspace = true
#edition.workspace = true
edition = "2024"
version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = ["trace/enabled"]


[dependencies]
trace = { workspace = true }
thiserror = { workspace = true }
env = { workspace = true }
eyre = { workspace = true }
system_traits = { workspace = true, features = ["memory-sync"] }
