[package]
name = "js_runtime"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
version = "0.1.0"

[lib]
path = "src/lib.rs"

[features]
default = ["enable-tracing", "serde", "schemars"]
enable-tracing = ["trace/enabled"]
serde = ["dep:serde"]
schemars = ["dep:schemars"]

[dependencies]
system_traits = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
url = { workspace = true }
trace = { workspace = true }
serde = { workspace = true, optional = true }
futures = { workspace = true }
async-trait = { workspace = true }
which = { workspace = true }
strum = { workspace = true }
schemars = { workspace = true, optional = true }
