[package]
name = "js_runtime"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
version = "0.2.0"

[lib]
path = "src/lib.rs"

[features]
default = ["enable-tracing", "serde", "schemars"]
enable-tracing = ["trace/enabled"]
serde = ["dep:serde"]
schemars = ["dep:schemars"]

[dependencies]
system_traits = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
url = { workspace = true }
trace = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
which = { workspace = true }
strum = { workspace = true }
schemars = { workspace = true, optional = true }
log = { workspace = true }
bytes = { workspace = true }
rust-embed = { workspace = true, features = [
    "include-exclude",
    "deterministic-timestamps",
] }
bridge_rpc_core = { workspace = true }
bridge_rpc_router = { workspace = true }
omni_utils = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
