[package]
name = "omni_cache"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = ["trace/enabled"]

[dependencies]
mockall = { workspace = true }
async-trait = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
dir_walker = { workspace = true }
system_traits = { workspace = true, features = [
    "real-async-tokio",
    "real-sync",
    "memory-sync",
] }
derive-new = { workspace = true }
derive_builder = { workspace = true }
omni_hasher = { workspace = true }
bs58 = { workspace = true }
maps = { workspace = true }
yoke = { workspace = true }
omni_types = { workspace = true, features = ["serde"] }
globset = { workspace = true }
bytes = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
omni_utils = { workspace = true }
omni_collector = { workspace = true }
tokio = { workspace = true }
bytesize = { workspace = true }
omni_execution_plan = { workspace = true }
omni_task_context = { workspace = true }
omni_configurations = { workspace = true }
omni_core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
