[package]
name = "omni_capability_enforcement"
rust-version.workspace = true
edition.workspace = true
version = "0.0.0"
authors.workspace = true
repository.workspace = true

[lib]
name = "omni_capability_enforcement"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
omni_capabilities = { workspace = true }
omni_types = { workspace = true }

# Tier-3 OS sandbox (Landlock) is Linux-only; other targets get the no-op seam.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libc = "0.2"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
