[package]
name = "omni_cli_core"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
version = "0.5.1"

[features]
default = ["enable-tracing"]
enable-tracing = [
    "trace/enabled",
    "dep:tracing",
    "dep:tracing-core",
    "dep:tracing-subscriber",
    "dep:tracing-futures",
]
vendored-openssl = [
    "omni_cache/vendored-openssl",
    "omni_execution_plan/vendored-openssl",
]

[dependencies]
eyre = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
derive-new = { workspace = true }
clap_complete = { workspace = true }
shadow-rs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
trace = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-core = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-futures = { workspace = true, optional = true }
omni_types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
schemars = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
lazy-regex = { workspace = true }
omni_core = { workspace = true }
config_utils = { workspace = true, features = [
    "serde",
    "schemars",
    "validator-garde",
] }
merge = { workspace = true }
toml = { workspace = true }
js_runtime = { workspace = true }
system_traits = { workspace = true, features = [
    "real-async-tokio",
    "real-sync",
    "memory-async",
] }
dir_walker = { workspace = true, features = ["ignore", "memory"] }
petgraph = { workspace = true }
thiserror = { workspace = true }
defer = { workspace = true }
strum = { workspace = true }
garde = { workspace = true }
env_loader = { workspace = true }
env = { workspace = true }
maps = { workspace = true }
sets = { workspace = true }
enum-map = { workspace = true }
rmcp = { workspace = true }
omni_cache = { workspace = true }
omni_hasher = { workspace = true }
derive_builder = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
ahash = { workspace = true }
owo-colors = { workspace = true }
tiny-gradient = { workspace = true }
omni_expressions = { workspace = true }
omni_collector = { workspace = true }
path-clean = { workspace = true }
num_cpus = { workspace = true }
omni_process = { workspace = true }
omni_configurations = { workspace = true }
omni_generator_configurations = { workspace = true }
omni_generator = { workspace = true }
omni_context = { workspace = true }
omni_task_executor = { workspace = true }
clap_declspec = { workspace = true }
atty = { workspace = true }
clap_utils = { workspace = true }
omni_tracing_subscriber = { workspace = true }
time = { workspace = true }
bytesize = { workspace = true }
humantime = { workspace = true }
itertools = { workspace=true }
omni_task_context = { workspace = true }
omni_setup = { workspace = true }
omni_scm = { workspace = true }
omni_execution_plan = { workspace = true }
omni_prompt = { workspace = true }
value-bag = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true, features = ["default"] }
eyre = { workspace = true }
