[package]
name = "omni_collector"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = ["dep:trace", "trace/enabled", "dep:tracing"]

[dependencies]
eyre = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
dir_walker = { workspace = true }
omni_types = { workspace = true }
omni_hasher = { workspace = true }
system_traits = { workspace = true }
trace = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
enum-map = { workspace = true }
globset = { workspace = true }
omni_utils = { workspace = true }
