[package]
name = "omni_collector"
rust-version.workspace = true
edition.workspace = true
version = "0.1.0"
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = ["trace/enabled"]

[dependencies]
eyre = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
dir_walker = { workspace = true }
omni_types = { workspace = true }
omni_hasher = { workspace = true }
system_traits = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true }
enum-map = { workspace = true }
globset = { workspace = true }
omni_utils = { workspace = true }
derive-new = { workspace = true }
maps = { workspace = true }
bs58 = { workspace = true }
