[package]
name = "omni_collector"
rust-version.workspace = true
edition.workspace = true
version = "0.4.0"
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = ["trace/enabled"]

[dependencies]
eyre = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
dir_walker = { workspace = true }
omni_types = { workspace = true }
omni_command_config = { workspace = true }
omni_hasher = { workspace = true }
system_traits = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true }
enum-map = { workspace = true }
globset = { workspace = true }
omni_utils = { workspace = true }
derive-new = { workspace = true }
maps = { workspace = true }
bs58 = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
