[package]
name = "omni_command_config"
rust-version.workspace = true
edition.workspace = true
version = "0.0.0"
authors.workspace = true
repository.workspace = true

[lib]
name = "omni_command_config"
path = "src/lib.rs"

[features]
default = ["merge", "serde", "schemars"]
merge = ["dep:merge"]
serde = ["dep:serde", "dep:omni_serde_validators", "dep:serde-untagged"]
schemars = ["dep:schemars"]

[dependencies]
thiserror = { workspace = true }
strum = { workspace = true }
derive-new = { workspace = true }
omni_tera = { workspace = true }
env = { workspace = true }
shlex = { workspace = true }
maps = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, optional = true }
serde-untagged = { workspace = true, optional = true }
omni_serde_validators = { workspace = true, optional = true }
merge = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
test-log = { workspace = true }
