[package]
name = "omni_config_types"
rust-version.workspace = true
edition.workspace = true
version = "0.0.0"
authors.workspace = true
repository.workspace = true

[lib]
name = "omni_config_types"
path = "src/lib.rs"
[features]
default = ["enable-tracing", "merge", "serde", "schemars"]
enable-tracing = ["dep:tracing", "trace/enabled"]
merge = ["dep:merge"]
serde = ["dep:serde", "dep:omni_serde_validators"]

[dependencies]
eyre = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true, optional = true }
derive_builder = { workspace = true }
derive-new = { workspace = true }
omni_serde_validators = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
merge = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
test-log = { workspace = true }
