[package]
name = "omni_context"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = ["trace/enabled", "dep:tracing"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
trace = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
strum = { workspace = true }
system_traits = { workspace = true }
omni_configurations = { workspace = true }
omni_core = { workspace = true }
env = { workspace = true }
env_loader = { workspace = true }
maps = { workspace = true }
sets = { workspace = true }
config_utils = { workspace = true }
omni_hasher = { workspace = true }
omni_cache = { workspace = true }
omni_collector = { workspace = true }
omni_types = { workspace = true }
dir_walker = { workspace = true }
merge = { workspace = true }
path-clean = { workspace = true }
enum-map = { workspace = true }
globset = { workspace = true }
bs58 = { workspace = true }
serde_yml = { workspace = true }
derive-new = { workspace = true }
async-trait = { workspace = true }
either = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true, features = ["default"] }
eyre = { workspace = true }
