[package]
name = "omni_context"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = ["trace/enabled"]

[[bench]]
path = "./benches/omni_context_benchmarks.rs"
name = "omni_context_benchmarks"
harness = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
system_traits = { workspace = true }
omni_configurations = { workspace = true }
omni_core = { workspace = true }
env = { workspace = true }
env_loader = { workspace = true }
maps = { workspace = true }
sets = { workspace = true }
config_utils = { workspace = true }
omni_hasher = { workspace = true }
omni_cache = { workspace = true }
omni_collector = { workspace = true }
omni_types = { workspace = true }
dir_walker = { workspace = true }
merge = { workspace = true }
path-clean = { workspace = true }
enum-map = { workspace = true }
globset = { workspace = true }
bs58 = { workspace = true }
serde_yml = { workspace = true }
derive-new = { workspace = true }
async-trait = { workspace = true }
either = { workspace = true }
shadow-rs = { workspace = true }
owo-colors = { workspace = true }
omni_tracing_subscriber = { workspace = true }
omni_task_context = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }
omni_test_utils = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true, features = ["default"] }
eyre = { workspace = true }
