[package]
name = "omni_core"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = ["trace/enabled", "dep:tracing"]

[dependencies]
serde = { workspace = true }
schemars = { workspace = true }
derive_more = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
trace = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
strum = { workspace = true }
derive-new = { workspace = true }
