[package]
name = "omni_core"
rust-version.workspace = true
edition.workspace = true
version = "0.2.2"
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = ["trace/enabled"]

[dependencies]
serde = { workspace = true }
schemars = { workspace = true }
derive_more = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
derive-new = { workspace = true }
maps = { workspace = true }
merge = { workspace = true }
sets = { workspace = true }
omni_config_types = { workspace = true }
