[package]
name = "omni_discovery"
rust-version.workspace = true
edition.workspace = true
version = "0.0.0"
authors.workspace = true
repository.workspace = true

[lib]
name = "omni_discovery"
path = "src/lib.rs"
[features]
default = ["enable-tracing"]
enable-tracing = ["dep:tracing", "trace/enabled"]

[dependencies]
eyre = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true, optional = true }
derive_builder = { workspace = true }
derive-new = { workspace = true }
dir_walker = { workspace = true }
globset = { workspace = true }
omni_discovery_utils = { workspace = true }
