[package]
name = "omni_execution_plan"
rust-version.workspace = true
edition.workspace = true
version = "0.2.0"
repository.workspace = true

[features]
default = ["enable-tracing"]
enable-tracing = ["trace/enabled"]
vendored-openssl = ["omni_scm/vendored-openssl"]

[dependencies]
eyre = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
derive-new = { workspace = true }
derive_builder = { workspace = true }
globset = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true }
omni_configurations = { workspace = true }
omni_core = { workspace = true }
omni_expressions = { workspace = true }
config_utils = { workspace = true }
maps = { workspace = true }
ahash = { workspace = true }
bs58 = { workspace = true }
omni_scm = { workspace = true }
omni_types = { workspace = true }
path-clean = { workspace = true }
omni_config_types = { workspace = true }
