[package]
name = "omni_expressions"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
path = "./benches/omni_expressions_benchmarks.rs"
name = "omni_expressions_benchmarks"
harness = false

[features]
default = ["enable-tracing", "serde", "schemars"]
schemars = ["dep:schemars"]
serde = ["dep:serde"]
enable-tracing = ["dep:trace", "trace/enabled", "dep:tracing"]

[dependencies]
thiserror = { workspace = true }
eyre = { workspace = true }
strum = { workspace = true }
trace = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
cel = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
